// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Summary with many 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $231,223.25
  </h1>
</div>
`;

exports[`Should render Summary with one 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;
